# KATHA-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_stage1_pricing.py  0003_stage1_pricing_seed.py  0004_stage3a_themes.py  0005_stage3a_themes_seed.py  0006_stage3b_standards.py  0007_stage3b_standards_seed.py  0008_stage3c_mep_seed.py  0009_stage3d_mfg_category.py  0010_stage3d_mfg_seed.py  0011_stage3e_codes_seed.py  0012_stage3e_ergonomics_seed.py  0013_stage3f_suggestions.py  0014_stage3f_suggestions_seed.py  0015_stage5_chat_sessions.py  0016_stage5b_project_memory.py  0017_stage6_corpus.py  0018_stage7_uploaded_assets.py  0019_stage8_memory.py  0020_stage9_haptic.py  0021_stage11_transparency.py  0022_stage13_indexes.py  0023_stage12_live_feeds.py  0024_project_type.py  0025_notes.py  0026_notes_tags.py  0027_notes_image_url.py  0028_design_version_prompt.py  0029_theme_visual_hints.py  0030_materials_wood_seed.py  0031_materials_metals_seed.py  0032_materials_upholstery_seed.py  0033_materials_finishes_seed.py  0034_materials_finish_v2.py  0035_design_variations_seed.py  0036_project_region.py  0037_intl_codes_seed.py  0038_graph_normalization.py
backend/app/: config.py  database.py  main.py  middleware.py
backend/app/agents/: __init__.py  architect_agent.py  auto_index.py  confidence.py  persistence.py  stream.py  tool.py
backend/app/corpus/: __init__.py  chunker.py  ingestion.py  re_ranker.py  retriever.py
backend/app/db/: __init__.py  audit.py  cache.py  conventions.py  repository.py
backend/app/feeds/: __init__.py  anomaly.py  base.py  fallback.py  freshness.py  registry.py  service.py  slack.py
backend/app/haptic/: __init__.py  catalog.py  exporter.py  seed.py  validator.py
backend/app/knowledge/: __init__.py  clearances.py  climate.py  codes.py  costing.py  ergonomics.py  ibc.py  manufacturing.py  materials.py  mep.py  regional_materials.py  space_standards.py  structural.py  summary.py  themes.py  variations.py
backend/app/memory/: __init__.py  chunker.py  embeddings.py  indexer.py  retriever.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: __init__.py  architecture.py  brief.py  design_graph.py  feeds.py  (+6 more)
backend/scripts/: backup.sh  restore.sh
backend/tests/: conftest.py
(+512 files in other folders)
